1.0.1: 修改toList方法，让kjs可以正确使用 修改md